--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.4",
+    "next": "^14.2.3",
     "nextjs-tui-date-range-picker": "^2.1.1",
+    "pocketbase": "^0.21.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-starfield-animation": "^1.0.1",
+    "tailwindcss-bg-breakpoint": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
